<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activities.MainActivity">

	<include
		android:id="@+id/toolbar"
		layout="@layout/toolbar"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<br.tbm.github.api.components.CustomMontserratRegularTextView
		android:id="@+id/main_activity_list_description_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="10dp"
		android:text="@string/main_activity_list_empty"
		android:textColor="@color/light_grey"
		android:textSize="16sp"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<android.support.v7.widget.RecyclerView
		android:id="@+id/main_activity_recycler_view"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:overScrollMode="never"
		android:scrollbars="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</android.support.constraint.ConstraintLayout>